@@ -7,3 +7,9 @@ test_that("length of results are correct", {
   expect_equal(length(a), 4)
   expect_equal(length(b), 4)
 })
+
+test_that("name of id column is set", {
+  df <- rdply(4, function() c(a=1), .id='index')
+  
+  expect_equal(names(df), c('index', 'a'))
+})
